[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "electrolux-websocket2mqtt"
dynamic = ["version"]
description = 'Simple daemon republishing data from unofficial Electrolux WebSocket API to MQTT.'
readme = "README.md"
requires-python = ">=3.8"
license = "BSD-3-Clause"
keywords = [
  "electrolux",
  "iot",
  "mqtt",
]
authors = [
  { name = "Daniel Skowroński", email = "electrolux-websocket2mqtt@skowronski.cloud" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click~=8.3.1",
  "pyyaml~=6.0.3",
  "pydantic~=2.12.4",
  "paho-mqtt~=2.1.0",
  "coloredlogs~=15.0.1",
  "peewee~=3.18.3",
  "requests~=2.32.5",
  "pyelectroluxocp~=0.1.3"
]

[project.urls]
Documentation = "https://github.com/danielskowronski/electrolux-websocket2mqtt#readme"
Issues = "https://github.com/danielskowronski/electrolux-websocket2mqtt/issues"
Source = "https://github.com/danielskowronski/electrolux-websocket2mqtt"

[project.scripts]
electrolux-websocket2mqtt= "electrolux_websocket2mqtt.cli:electrolux_websocket2mqtt"

[tool.hatch.version]
path = "src/electrolux_websocket2mqtt/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/electrolux_websocket2mqtt tests}"

[tool.coverage.run]
source_pkgs = ["electrolux_websocket2mqtt", "tests"]
branch = true
parallel = true
omit = [
  "src/electrolux_websocket2mqtt/__about__.py",
]

[tool.coverage.paths]
electrolux_websocket2mqtt = ["src/electrolux_websocket2mqtt", "*/electrolux-websocket2mqtt/src/electrolux_websocket2mqtt"]
tests = ["tests", "*/electrolux-websocket2mqtt/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
indent-width = 2
line-length = 120